--- a/base/public/registrar_sucursal.html
+++ b/base/public/registrar_sucursal.html
@@ -209,6 +209,10 @@
     <script src="js/servicio_sucursales.js"></script>
     <script src="js/controlador_registrar_sucursal.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+
+    <script src="js/stringProvincias.js"></script>
+    <script src="js/ubicacion.js"></script>
+
     <script src="js/getNombre.js"></script>
     <script src="js/clienteIniciado.js"></script>
 
