--- a/base/public/listar_librosComprables.html
+++ b/base/public/listar_librosComprables.html
@@ -64,7 +64,7 @@
         <div class="modal-content" id="signinpopup">
 
             <div class="optionProfile" id="idVerPerfil"><a href="ver-perfil-usuario.html">Mi Perfil</a></div>
-            <div class="optionProfile"><a href="">Mi Carrito</a></div>
+            <div class="optionProfile"><a href="carrito.html">Mi Carrito</a></div>
             <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
             <div class="optionProfile"><a href="">Mis compras</a></div>
             <div class="optionProfile"><a href="">Mis libros</a></div>
