Estilos landin bamboo

--- a/base/public/landingBamboo.html
+++ b/base/public/landingBamboo.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+
         <div class="banner">
             <h2>BAMBOO TEAM</h2>
             <p> “El compromiso individual con un esfuerzo colectivo es lo que hace que un equipo, una empresa o una
@@ -30,234 +31,283 @@
             <span>- Vince Lombardi</span>
 
         </div>
+
         <div class="info-container" id="misionVision">
 
             <div class="menu">
-                <h4 id="missionH">Mision</h4>
-                <p id="misionP">Somos una empresa dedicada al desarrollo de software, con el objetivo de
-                    incrementar la competitividad y productividad de nuestros clientes brindando
-                    soluciones integrales por medio de una atención personalizada. Para eso
-                    trabajamos en un ambiente de calidad, donde el servicio ofrecido es un reflejo de
-                    nuestra eficacia y eficiencia empresarial por satisfacer las necesidades de
-                    nuestros clientes.</p>
+                <img id="missionH" src="imgs/mision.png"></img>
+
+                <div id="misionP">
+
+                    <h4>Misión</h4>
+                    <p>Somos una empresa dedicada al desarrollo de software, con el objetivo de
+                        incrementar la competitividad y productividad de nuestros clientes brindando
+                        soluciones integrales por medio de una atención personalizada.</p>
+
+                </div>
             </div>
 
             <div class="content">
-                <h4 id="visionH">Vision</h4>
-                <p id="visionP">Pretendemos ser un referente a nivel nacional altamente calificado en el sector de
-                    las TIC. Para ello nuestro objetivo es brindarles a nuestros clientes un servicio
-                    altamente calificado que cumpla con los estándares del mercado. Dando así un
-                    producto final de alto nivel donde el cliente se sienta satisfecho por nuestros
-                    servicios.</p>
+                <img id="visionH" src="imgs/visión.png"></img>
 
-            </div>
-
-        </div>
-        <h2>Integrantes</h2>
-        <div class="container" id="integrantesBamboo">
-
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Puntualidad</li>
-                            <li>Respetuoso</li>
-                            <li>Optimista</li>
-                            <li>Honesto</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Nervioso</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Natalia</h2>
-                    <p>Soporte</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Ordenada</li>
-                            <li>Respetuosa</li>
-                            <li>Optimista</li>
-                            <li>Organizada</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Sensible</li>
-                            <li>Insegura</li>
-                            <li>Tímida</li>
-                            <li>Nerviosa</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Ariana</h2>
-                    <p>Soporte</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Amigable</li>
-                            <li>Respetuosa</li>
-                            <li>Ordenada</li>
-                            <li>Responsable</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Dudosa</li>
-                            <li>Impaciente</li>
-                            <li>Ansiosa</li>
-                            <li>Dispera</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Diego</h2>
-                    <p>Calidad</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Entusiasta</li>
-                            <li>Respetuoso</li>
-                            <li>Optimista</li>
-                            <li>Discreto</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Distraído</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>Efectividad</li>
-                            <li>Puntualidad</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Axel</h2>
-                    <p>Calidad</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Ordenado</li>
-                            <li>Respetuoso</li>
-                            <li>Optimista</li>
-                            <li>Paciente</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Dudoso</li>
-                            <li>Hablar en Público</li>
-                            <li>Tímido</li>
-                            <li>Manejo del Tiempo</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="galerias">
-
-                <div class="info-integrante">
-                    <h2>Fabricio</h2>
-                    <p>Desarrollo</p>
-                </div>
-
-                <div class="caract-integrante">
-                    <div class="info">
-                        <h3>Fortalezas</h3>
-
-                        <ul>
-                            <li>Analítico</li>
-                            <li>Respetuoso</li>
-                            <li>Paciente</li>
-                            <li>Creativo</li>
-                        </ul>
-                    </div>
-
-                    <div class="info">
-                        <h3>Debilidades</h3>
-
-                        <ul>
-                            <li>Callado</li>
-                            <li>Tímido</li>
-                            <li>Nervioso</li>
-                            <li>Disperso</li>
-                        </ul>
-                    </div>
+                <div id="visionP">
+                    <h4>Visión</h4>
+                    <p>Nuestro objetivo es brindarles a nuestros clientes un servicio
+                        altamente calificado que cumpla con los estándares del mercado. Dando así un
+                        producto final de alto nivel donde el cliente se sienta satisfecho.</p>
                 </div>
 
 
             </div>
 
         </div>
+
+        <div class="fondo_integrantes">
+
+            <h2>Integrantes</h2>
+
+            <div class="container" id="integrantesBamboo">
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img6.png" alt="">
+
+                        <h2>Sebastián</h2>
+                        <p>Coordinador</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>
+                        Sebastián
+                    </h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+                            <ul>
+                                <li>Puntualidad</li>
+                                <li>Respetuoso</li>
+                                <li>Optimista</li>
+                                <li>Honesto</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+                            <ul>
+                                <li>Nervioso</li>
+                                <li>Manejo de Tiempo</li>
+                                <li>No muy comunicativo</li>
+                                <li>Inseguro</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img5.png" alt="">
+
+                        <h2>Natalia</h2>
+                        <p>Soporte</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>Natalia</h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+
+                            <ul>
+                                <li>Ordenada</li>
+                                <li>Respetuosa</li>
+                                <li>Optimista</li>
+                                <li>Organizada</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+
+                            <ul>
+                                <li>Sensible</li>
+                                <li>Insegura</li>
+                                <li>Tímida</li>
+                                <li>Nerviosa</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img5.png" alt="">
+
+                        <h2>Ariana</h2>
+                        <p>Soporte</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>Ariana</h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+
+                            <ul>
+                                <li>Amigable</li>
+                                <li>Respetuosa</li>
+                                <li>Ordenada</li>
+                                <li>Responsable</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+
+                            <ul>
+                                <li>Dudosa</li>
+                                <li>Impaciente</li>
+                                <li>Ansiosa</li>
+                                <li>Dispersa</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img6.png" alt="">
+
+                        <h2>Diego</h2>
+                        <p>Calidad</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>Diego</h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+
+                            <ul>
+                                <li>Entusiasta</li>
+                                <li>Respetuoso</li>
+                                <li>Optimista</li>
+                                <li>Discreto</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+
+                            <ul>
+                                <li>Distraído</li>
+                                <li>Manejo de Tiempo</li>
+                                <li>Efectividad</li>
+                                <li>Puntualidad</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img6.png" alt="">
+
+                        <h2>Axel</h2>
+                        <p>Calidad</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>Axel</h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+
+                            <ul>
+                                <li>Ordenado</li>
+                                <li>Respetuoso</li>
+                                <li>Optimista</li>
+                                <li>Paciente</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+
+                            <ul>
+                                <li>Dudoso</li>
+                                <li>Hablar en Público</li>
+                                <li>Tímido</li>
+                                <li>Manejo del Tiempo</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="galerias">
+
+                    <div class="info-integrante">
+                        <img src="imgs/avatar_img6.png" alt="">
+
+                        <h2>Fabricio</h2>
+                        <p>Desarrollo</p>
+                    </div>
+
+                    <div class="caract-integrante">
+
+                        <!-- <h2>Fabricio</h2> -->
+
+                        <div class="info">
+                            <h3>Fortalezas</h3>
+
+                            <ul>
+                                <li>Analítico</li>
+                                <li>Respetuoso</li>
+                                <li>Paciente</li>
+                                <li>Creativo</li>
+                            </ul>
+                        </div>
+
+                        <div class="info">
+                            <h3>Debilidades</h3>
+
+                            <ul>
+                                <li>Callado</li>
+                                <li>Tímido</li>
+                                <li>Nervioso</li>
+                                <li>Disperso</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
 
     </main>
+
     <footer id="footer">
 
         <div class="footer">
@@ -266,10 +316,11 @@
                 <h1> Bamboo</h1>
                 <p>coding since 2019</p>
             </div>
-           
+
             <div class="footfour">
-                <h2>¿querés ver en lo que estamos trabajando?</h2>
-                <input type="button" class="buttonArt" value="Llevame a Bamboooks"  onclick="location.replace('index.html')">
+                <h2>¿quieres ver en lo que estamos trabajando?</h2>
+                <input type="button" class="buttonArt" value="Llevame a Bamboooks"
+                    onclick="location.replace('index.html')">
             </div>
             <div class="footfive">
                 <p>Bamboo Team 2019</p>
@@ -279,6 +330,7 @@
         </div>
 
     </footer>
+
 </body>
 
 </html>
