--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -31,23 +31,22 @@
                 id="barnesLogo">
         </a>
         <div class="sign-in-button">
-            <button id="myBtn"><img src="https://img.icons8.com/ios-filled/64/000000/user.png" width="25px"></button>
+            <button id="myBtn"><img src="https://img.icons8.com/ios-filled/64/000000/user.png"
+                    width="25px"></button>
         </div>
     </header>
 
     <nav class="nav-menu">
         <ul>
-            <li class="parent" id="dropdown"><a href="#">Libros</a>
+            <li class="parent" id="dropdown"><a href="listar_libros.html" id="option_libros">Libros</a>
                 <ul class="child">
                     <li id="optionGeneros"><a id="refGeneros" href="listar_genero.html">Géneros</a></li>
                     <li id="optionCategorias"><a href="listar_categoría.html">Categorías</a></li>
-                    <li id="optionMisLibros"><a href="listar_librosComprados.html">Mis Libros</a></li>
-                    <li id="optionAutores"><a href="listar-autores.html"></a></li>
                 </ul>
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
                 <ul class="child">
-                    <li ><a id='optionSucursales' href="listar_sucursales.html ">Sucursales</a></li>
+                    <li id="optionSucursales"><a href="listar_sucursales.html ">Sucursales</a></li>
                 </ul>
             </li>
 
@@ -57,13 +56,18 @@
 
             <li class="parent" id="dropdown"><a href="#">Otros</a>
                 <ul class="child">
-                    <li id='optionIntercambio'><a href="listar_libros_intercambiables.html">Intercambios</a></li>
+                    <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                     <li id='optionUsers'><a href="#">Usuarios</a></li>
-                    <li id='optionBitacora'><a href="listar_bitacora.html">Bitácora</a></li>
+                    <li id='optionBitacora'><a href="#">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
-                    <li ><a href="inventario_general.html" id="optionInventario">Inventario</a></li>
+                    <li id='optionInventario'><a href="#">Inventario</a></li>
                 </ul>
             </li>
+        </ul>
+        </li>
+
+        </ul>
+        </li>
         </ul>
     </nav>
 
