--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -31,23 +31,22 @@
                 id="barnesLogo">
         </a>
         <div class="sign-in-button">
-            <button id="myBtn"><img src="https://img.icons8.com/ios-filled/64/000000/user.png"
-                    width="25px"></button>
+            <button id="myBtn"><img src="https://img.icons8.com/ios-filled/64/000000/user.png" width="25px"></button>
         </div>
     </header>
 
     <nav class="nav-menu">
         <ul>
-            <li class="parent" id="dropdown"><a href="listar_libros.html" id="option_libros">Libros</a>
+            <li class="parent" id="dropdown"><a href="#" id="option_libros">Libros</a>
                 <ul class="child">
-                    <li id="optionGeneros"><a id="refGeneros" href="listar_genero.html">Géneros</a></li>
                     <li id="optionCategorias"><a href="listar_categoría.html">Categorías</a></li>
-                    <li id="optionMisLibros"><a href="listar_libros.html">Mis Libros</a></li>
+                    <li id="optionGeneros"><a id="refGeneros" href="listar_genero.html">Géneros</a></li>
+                    <li id="optionAutores"><a href="listar-autores.html">Autores</a></li>
                 </ul>
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
                 <ul class="child">
-                    <li id="optionSucursales"><a href="listar_sucursales.html ">Sucursales</a></li>
+                    <li id="optionSucursales"><a href="listar_sucursales.html " id="sucursal_href">Sucursales</a></li>
                 </ul>
             </li>
 
@@ -57,7 +56,7 @@
 
             <li class="parent" id="dropdown"><a href="#">Otros</a>
                 <ul class="child">
-                    <li><a href="listar_libros_intercambiables.html">Intercambios</a></li>
+                    <li id='optionIntercambio'><a href="listar_libros_intercambiables.html">Intercambios</a></li>
                     <li id='optionUsers'><a href="#">Usuarios</a></li>
                     <li id='optionBitacora'><a href="#">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
@@ -65,13 +64,7 @@
                 </ul>
             </li>
         </ul>
-        </li>
-
-        </ul>
-        </li>
-        </ul>
     </nav>
-
 
     <main>
 
@@ -94,7 +87,7 @@
                 <div class="optionProfile"><a href="carrito.html">Mi Carrito</a></div>
                 <div class="optionProfile"> <a href="listar_tarjetas.html">Mis Tarjetas</a></div>
                 <div class="optionProfile"><a href="">Mis compras</a></div>
-                <div class="optionProfile"><a href="">Mis libros</a></div>
+                <div class="optionProfile"><a id="optionMisLibros" href="">Mis libros</a></div>
                 <div class="optionProfile"><a href="misintercambios.html">Mis intercambios</a></div>
                 <button id="btn_cerrar">Cerrar Sesión</button>
             </div>
