--- a/base/public/misintercambios.html
+++ b/base/public/misintercambios.html
@@ -77,6 +77,7 @@
 
         </div>
         <h1>Mis Intercambios Realizados</h1>
+        <div class=""> <a href="listar_libros_intercambiables.html">Volver a la lista</a></div>
 
 
         <label for="txt_filtro">Buscar</label>
