--- a/base/public/solicitudes.html
+++ b/base/public/solicitudes.html
@@ -78,6 +78,9 @@
         </div>
         <h1>Solicitudes Realizadas</h1>
 
+        <div class=""> <a href="listar_libros_intercambiables.html">Volver a la lista</a></div>
+
+
         <div class=""> <a href="solicitudes_recibidas.html">Recibidas</a></div>
 
         <div class=""> <a href="solicitudes.html">Realizadas</a></div>
