--- a/base/public/solicitudes_recibidas.html
+++ b/base/public/solicitudes_recibidas.html
@@ -77,6 +77,7 @@
 
         </div>
         <h1>Solicitudes Recibidas</h1>
+        <div class=""> <a href="listar_libros_intercambiables.html">Volver a la lista</a></div>
 
         <div class=""> <a href="solicitudes_recibidas.html">Recibidas</a></div>
 
