--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -46,7 +46,7 @@
             </li>
             <li class="parent"><a href="listar_librerias.html" id="optionlibrerias">Librerías</a>
                 <ul class="child">
-                    <li ><a id='optionSucursales' href="listar_sucursales.html ">Sucursales</a></li>
+                    <li ><a id='optionSucursales' href="listar_sucursales.html">Sucursales</a></li>
                 </ul>
             </li>
 
@@ -60,7 +60,7 @@
                     <li id='optionUsers'><a href="#">Usuarios</a></li>
                     <li id='optionBitacora'><a href="listar_bitacora.html">Bitácora</a></li>
                     <li id='optionReportes'><a href="#">Reportes</a></li>
-                    <li ><a href="inventario_general.html" id="optionInventario">Inventario</a></li>
+                    <li id='optionInventario'><a href="inventario_libreria.html" id="optionInventario">Inventario</a></li>
                 </ul>
             </li>
         </ul>
