--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -97,6 +97,9 @@
 
         <tr>
           <th>Nombre</th>
+          <th>Editar</th>
+          <th>Estado</th>
+          <th>Eliminar</th>
 
         </tr>
 
