--- a/base/public/recuperar_contrasenna.html
+++ b/base/public/recuperar_contrasenna.html
@@ -33,14 +33,18 @@
 
     <main>
 
-        <h1>Restablecer Contraseña</h1>
+        <h1>Restablecer Contraseña</h1>  
+
+
 
         <div class="contenedor">
 
             <section>
 
                 <div>
-                    <input id="txt_correo" type="text" placeholder="Nueva Contraseña">
+
+                    <label for="txt_correo" type="text">Ingresar Correo Electronico</label>
+                    <input id="txt_correo" type="text" placeholder="Correo electronico">
                 </div>
 
             </section>
