--- a/base/public/listar_librosComprables.html
+++ b/base/public/listar_librosComprables.html
@@ -8,7 +8,8 @@
     <title>Listar Libros</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/listar_libros.css">
-    <link rel="stylesheet" href="CSS/listar_librosComprables.css">
+  <!-- <link rel="stylesheet" href="CSS/listar_librosComprables.css"> -->
+  <link rel="stylesheet" href="css/fix-libros.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
