Bitacora con hora e imagen en perfil

--- a/base/public/ver-perfil-usuario.html
+++ b/base/public/ver-perfil-usuario.html
@@ -71,7 +71,7 @@
         </div>
 
         <h2> <span id="txt_nombreUsuario"></span></h2>
-        <p><span id="avatar"></span></p>
+        <p><span ><img src="" alt="" id="avatar" width="250px" height="300px"></span></p>
         <p>Primer Nombre: <span id="txt_primerNombre"></span></p>
         <p>Segundo Nombre: <span id="txt_segundoNombre"></span></p>
         <p>Primer Apellido: <span id="txt_primerApellido"></span></p>
