--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Listar Usuarios</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/listar_usuarios.css">
   <link rel="stylesheet" href="css/navbar.css">
