--- a/base/public/ver-perfil-autor.html
+++ b/base/public/ver-perfil-autor.html
@@ -74,7 +74,7 @@
         
                 </div>
         <h2>Autor <span id="txt_nombre"></span> </h2>
-        <p><span id="foto"></span></p>
+        <p><span ><img src="" alt="" id="foto" width="250px" height="300px"></span></p>
         <p>Nombre Artístico: <span id="txt_nombre_artistico"></span></p>
         <p>Fecha de Nacimiento: <span id="txt_nacimiento"></span></p>
         <p>Fecha de Muerte: <span id="txt_muerte"></span></p>
@@ -82,7 +82,6 @@
         <p>Biografía: <span id="txt_bio"></span></p>
         <p>Premios: <span id="txt_premios"></span></p>
 
-        <a href="listar-autores.html"><button type="button">Volver</button></a>
     </main>
 
     <footer></footer>
