--- a/base/public/registrar_inventario_sucursal.html
+++ b/base/public/registrar_inventario_sucursal.html
@@ -169,6 +169,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/getNombre.js"></script> 
     <script src="js/clienteIniciado.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 
 
   </body>
