--- a/base/public/index.html
+++ b/base/public/index.html
@@ -34,7 +34,7 @@
         <div class="bannerContent">
             <h1>Vienes buscando un libro y te vas siendo parte de una<span> familia </span>!</h1>
             <a href="registrar_cliente.html">Registrarme</a>
-            <a href="registrar_libreria.html">Registrar mi Librería</a>
+            <a href="enviar_solicitud_libreria.html">Solicitud de Librería</a>
             <button id="iniciar_sesion_banner"> Iniciar Sesión </button>
         </div>
     </section>
